--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a Node.js backend that powers a React.js based client",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest --coverage --verbose"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
