--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/vim,osx,node,linux,windows
 package-lock.json
 .editorconfig
+.prettierrc.js
