--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
+    "mongoose-schema-jsonschema": "^1.4.6",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
