--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-router": "0.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "mongoose-schema-jsonschema": "^1.4.6",
