--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "mongoose-schema-jsonschema": "^1.4.6",
