--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "mongoose-schema-jsonschema": "^1.4.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@code-fellows/supergoose": "^1.0.11",
